Molo ClothesShop Responsiv

--- a/index.html
+++ b/index.html
@@ -3,9 +3,332 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medo</title>
+    <title>Molo</title>
+    <link rel="stylesheet" href="style/stylemain.css">
 </head>
 <body>
-    
+    <div class="header">
+    <div class="container">
+    <div class="navbar">
+        <div class="logo">
+            <img src="images/logo.jpg" alt="logo">
+        </div>
+        <nav>
+            <ul id="MenuItems">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Bags</a></li>
+                <li><a href="#">Shoes</a></li>
+                <li><a href="#">men</a></li>
+                <li><a href="#">women</a></li>
+                <li><a href="#">kids</a></li>
+                <li><a href="#">Accesories</a></li>
+            </ul>
+        </nav>
+        <img src="images/logo.jpg" alt="logo" width="30px" height="30px" class="secondary_icon">
+        <img class="menu-icon" src="images/toggle.webp" alt="logo" 
+        ondblclick="menutoggle()">
+    </div>
+    <div class="row">
+        <div class="col-2">
+            <h1>Molo</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem.</p>
+<a href="#" class="btn">Explore Now &#8594;</a>
+        </div>
+        <div class="col-2">
+            <img src="images/men.jpg" alt="" id="third">
+        </div>
+    </div>
+</div>
+</div>
+<!-- featured products -->
+<div class="categories">
+    <div class="small_container">
+        <div class="row">
+            <div class="col-3">
+            <img src="images/model_1.jpg" alt="product_1">
+            </div>
+            <div class="col-3">
+            <img src="images/model_2.jpg" alt="product_2">
+            </div>
+            <div class="col-3">
+            <img src="images/model_3.jpg" alt="product_3">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="small_container">
+    <h2 class="title">Latest Offers</h2>
+    <div class="row">
+        <div class="col-4">
+            <img src="images/model_5.jpg" alt="product_1">
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img src="images/model_7.jpg" alt="product_1">
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img src="images/model_11.jpg" alt="product_1">
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img src="images/model_9.jpg" alt="product_1">
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <p>$50.00</p>
+        </div>
+    </div>
+    <h2 class="title">Featured Products</h2>
+    <div class="row">
+        <div class="col-4">
+            <img src="images/model_12.jpg" alt="product_1">
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img src="images/model_13.jpg" alt="product_1">
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img src="images/model_14.jpg" alt="product_1">
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img src="images/model_15.jpg" alt="product_1">
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <p>$50.00</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4">
+            <img src="images/model_16.jpg" alt="product_1">
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img src="images/model_17.jpg" alt="product_1">
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img src="images/model_18.jpg" alt="product_1">
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img src="images/model_19.jpg" alt="product_1">
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <p>$50.00</p>
+        </div>
+    </div>
+</div>
+<div class="offer">
+    <div class="small_container">
+        <div class="row">
+            <div class="col-2" id="band">
+                <img src="images/model_20.jpg" alt="men">
+            </div>
+            <div class="col-2">
+                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>smart band 4</h3>
+                <small>Lorem ipsum, dolor sit amet consectetur adipisicing.</small>
+            <a href="#" class="btn">Buy Now &#8594;</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="testimonals">
+    <div class="small_container">
+        <div class="row">
+            <div class="col-3">
+                <i class="fa fa-quote-left"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <img src="images/ceo_2.jpg" alt="">
+                <h3>Ali Wael</h3>
+            </div>
+            <div class="col-3">
+                <i class="fa fa-quote-left"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <img src="images/ceo_1.jpg" alt="">
+                <h3>Hazem Badr</h3>
+            </div>
+            <div class="col-3">
+                <i class="fa fa-quote-left"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <img src="images/ceo_3.jpg" alt="">
+                <h3>Nour Wael</h3>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="brands">
+    <div class="small_container">
+        <div class="row">
+            <div class="col-5">
+                <img src="images/logo_2.jpg" alt="men">
+            </div>
+            <div class="col-5">
+                <img src="images/logo_3.jpg" alt="men">
+            </div>
+            <div class="col-5">
+                <img src="images/logo_4.jpg" alt="men">
+            </div>
+            <div class="col-5">
+                <img src="images/logo_5.jpg" alt="men">
+            </div>
+            <div class="col-5">
+                <img src="images/logo_6.jpg" alt="men">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="footer-col-1">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit.</p>
+                <div class="app-logo">
+                    <img src="images/logo.jpg" alt="">
+                    <img src="images/men.jpg" alt="">
+                </div>
+            </div>
+            <div class="footer-col-2">
+                <img src="images/men.jpg" alt="men">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="footer-col-3">
+                <h3>Useful</h3>
+                <ul>
+                    <li>Coupons</li>
+                    <li>Coupons</li>
+                    <li>Coupons</li>
+                    <li>Coupons</li>
+                </ul>
+            </div>
+            <div class="footer-col-4">
+                <h3>Footer</h3>
+                <ul>
+                    <li>Facebook</li>
+                    <li>Youtube</li>
+                    <li>Twitter</li>
+                    <li>Instagram</li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <p class="copyright">copyright 2023 - B & W</p>
+    </div>
+</div>
+<script src="javascript/javascript.js"></script> 
 </body>
 </html>
